--- a/cerise/cerise.opam
+++ b/cerise/cerise.opam
@@ -17,7 +17,7 @@ depends: [
   "core" {>= "v0.14"}
   "ppx_jane" {>= "v0.14"}
   "shexp" {>= "v0.14"}
-  "bisect_ppx" {dev}
+  "bisect_ppx" {with-test}
   "odoc" {with-doc}
 ]
 build: [
