--- a/cerise/dune-project
+++ b/cerise/dune-project
@@ -24,5 +24,5 @@
   (core (>= "v0.14"))
   (ppx_jane (>= "v0.14"))
   (shexp (>= "v0.14"))
-  ; Development dependencies
-  (bisect_ppx :dev)))
+  ; Test only deps
+  (bisect_ppx :with-test)))
