--- a/cerise/bin/dune
+++ b/cerise/bin/dune
@@ -1,7 +1,7 @@
 (executable
  (public_name cerise)
  (name main)
- (libraries cerise_lib bio_io core)
+ (libraries cerise_lib bio_io core little_logger)
  (instrumentation
   (backend bisect_ppx))
  (preprocess
