--- a/cerise/cerise.opam
+++ b/cerise/cerise.opam
@@ -15,6 +15,7 @@ depends: [
   "bio_io" {>= "0.4"}
   "cmdliner" {>= "1.0"}
   "core" {>= "v0.14"}
+  "little_logger" {>= "0.2.0"}
   "ppx_jane" {>= "v0.14"}
   "shexp" {>= "v0.14"}
   "bisect_ppx" {with-test}
