--- a/cerise/dune-project
+++ b/cerise/dune-project
@@ -22,6 +22,7 @@
   (bio_io (>= "0.4"))
   (cmdliner (>= "1.0"))
   (core (>= "v0.14"))
+  (little_logger (>= "0.2.0"))
   (ppx_jane (>= "v0.14"))
   (shexp (>= "v0.14"))
   ; Test only deps
